# Milk

./: CMakeLists.txt
example/: CMakeLists.txt  example.cpp
src/: milk.hpp
src/milk/: Clientbound.hpp  ConnectionState.hpp  EventBus.hpp  Networking.hpp  Packet.cpp  Packet.hpp  PacketHandler.cpp  PacketHandler.hpp  Protocol.hpp  Serverbound.hpp  TcpConnection.cpp  TcpConnection.hpp  TcpServer.cpp  TcpServer.hpp
src/milk/core/: Core.hpp  EventBus.hpp  Server.cpp  Server.hpp  ServerStatus.cpp  ServerStatus.hpp
src/milk/net/: Connection.cpp  Connection.hpp  Server.cpp  Server.hpp  TcpConnection.cpp  TcpConnection.hpp  TcpServer.cpp  TcpServer.hpp
src/milk/packets/: Clientbound.hpp  PacketHandler.cpp  PacketHandler.hpp  Serverbound.hpp
src/milk/protocol/: ConnectionState.hpp  Packet.cpp  Packet.hpp  PacketHandler.cpp  PacketHandler.hpp
src/milk/protocol/clientbound/configuration/: FinishConfiguration.hpp  PluginMessage.hpp  RegistryData.hpp
src/milk/protocol/clientbound/login/: LoginSuccess.hpp
src/milk/protocol/clientbound/play/: Login.hpp
src/milk/protocol/clientbound/status/: PingResponse.hpp  StatusResponse.hpp
src/milk/protocol/serverbound/configuration/: AcknowledgeFinishConfiguration.hpp
src/milk/protocol/serverbound/handshaking/: Handshake.hpp  LegacyServerPing.hpp
src/milk/protocol/serverbound/login/: LoginAcknowledged.hpp  LoginStart.hpp
src/milk/protocol/serverbound/status/: PingRequest.hpp  StatusRequest.hpp
src/milk/registry/: DimensionType.cpp  DimensionType.hpp  PaintingVariant.cpp  PaintingVariant.hpp  Registry.hpp  WolfVariant.cpp  WolfVariant.hpp
src/milk/types/: GameMode.hpp  Identifier.cpp  Identifier.hpp  UUID.cpp  UUID.hpp
